@@ -76,6 +76,7 @@ require 'lobbyist/v2/activity_summary'
 require 'lobbyist/v2/appointment'
 require 'lobbyist/v2/authorization'
 require 'lobbyist/v2/campaign_iteration'
+require 'lobbyist/v2/category_default_front_template'
 require 'lobbyist/v2/category'
 require 'lobbyist/v2/communication_campaign'
 require 'lobbyist/v2/communication_piece'
@@ -109,6 +110,7 @@ require 'lobbyist/v2/enterprise_metrics'
 require 'lobbyist/v2/enterprise_setting'
 require 'lobbyist/v2/enterprise_user'
 require 'lobbyist/v2/enterprise'
+require 'lobbyist/v2/front_template'
 require 'lobbyist/v2/handwritten_review_metrics'
 require 'lobbyist/v2/handwritten_review'
 require 'lobbyist/v2/member_insight_metrics'
