@@ -1,3 +1,5 @@
+* Added FrontTemplate proxy model.
+* Added CategoryDefaultFrontTemplate proxy model.
 * Added CommunicationCampaign create method.
 
 === 0.5.18 2014-11-12
